syntax= "proto3";
option java_multiple_files = true;

message VariationRequest {
    message ForceVariation {
        int32 experiment_id =1;
        int32 variation_id =2;
    }
    string user_id = 1;
    string visitor_id = 2;
    string visit_id  =3;
    repeated ForceVariation forced_variations =4;

}
message Experiment {
    int32 experiment_id = 1;
    string name = 2;
    string app_id = 3;
    string team_id = 4 ;
    bool is_active=5;

}
message NestedExperiment {
    int32 experiment_id=1;
    string name = 2;
    string app_id = 3;
    string team_id = 4 ;
    bool is_active=5;
    repeated Variation Variations=6;
}

message Variation {
    message VariationAttributes {
        string attribute_name=1;
        string attribute_value=2;
    }
    int32 experiment_id = 1;
    int32 variation_id = 2;
    double weight =3;
    bool is_control= 4;
    bool is_active=5;
    bool is_winning=6;
    bool is_holdout=7;
    repeated VariationAttributes attribute =8;
}


message ExposureRequest {
    string user_id=1;
    string visitor_id=2;
    string visit_id=3;
    int32 experiment_id =4;
    int32 variation_id=5;
}

message ExposureReply {
    bool is_ok = 1;
}

service XsService {
    rpc getVariations(VariationRequest) returns (stream Variation);
    rpc logExposure(ExposureRequest) returns (ExposureReply);
}